      by the user, and the readline jar is not distributed with jsqsh.
      For those worried about this descision: java-readline hasn't been
      updated in over 7 years and JLine 2.x is approaching it pretty well
      in terms of functionality.  Java-readline can be installed on most
      linux machines by your package manager, so it is easy to add on.
* The command terminator may now end a jsqsh command. For example, the
  following are now legal:
        1> quit;
  or
        1> \echo hello how are you;
        hello how are you
* Added new SQL display style "json". 
* The behavior of setting $style is slightly different now, and is documented
  in the help for style. The support styles vary based upon the session type
  (e.g. a JDBC session vs. a Jaql session). Setting a SQL style with no
  session started, or a SQL session started sets it globally for all session.
  Jaql styles can only be applied during a jaql session, and only sets the
  value locally for the jaql session.
* Added $histid variable that contains the current buffer number you are 
  working on. Really useful for adding to your prompt.
* Upgraded to jline-2.8. JLine is an almost pure java line editing library, 
  similar to readline.  This version of jline adds support for most of the 
  basic "vi" command set.  
* Added support for ARRAY data type and hopefully better support for
  unrecognized data types.
* Added $editing_mode to allow you to set the editing keymap. Currently
  this is only supported by JLine, so to switch to "vi" mode, do:
     \set editing_mode=vi
* Added support for launching a Jaql interpreter from within jsqsh. Jaql 
  is a programming language designed for working with Hadoop. JSqsh's 
  support for jaql consists of:
    - The \jaql command starts a Jaql session
    - The --jaql when starting jsqsh, automatically starts a session
    - When in a jaql session, \go or the command terminator (";" by default)